<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.concerttickets.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="48sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtTickets"
        android:layout_marginTop="20dp"
        android:textSize="36sp"
        android:hint="@string/txtTickets"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtGroup"
        android:spinnerMode="dialog"
        android:prompt="@string/prompt"
        android:entries="@array/txtGroup"
        android:layout_below="@+id/txtTickets"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCost"
        android:id="@+id/btnCost"
        android:layout_below="@+id/txtGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="34sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:layout_below="@+id/btnCost"
        android:layout_marginTop="10dp"
        android:text="0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgConcert"
        android:src="@drawable/concert"
        android:contentDescription="@string/description"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txtResult" />
</RelativeLayout>
